<resources>
    <string name="app_name">FM Radio</string>
    <string name="toast_station_searched">Searched out available stations:</string>
    <string name="toast_cannot_search">Cannot search out available station.</string>
    <string name="optmenu_speaker">Speaker</string>
    <string name="optmenu_earphone">Earphone</string>
    <string name="save">Save</string>
    <string name="toast_sdcard_missing">Your SD card is missing!</string>
    <string name="toast_sdcard_insufficient_space">Insufficient storage space!</string>
    <string name="toast_recorder_internal_error">An internal error occurred in recorder!</string>
    <string name="error_external_storage_access">No Access to External Storage</string>
    <string name="feedback_description_external_access">Please allow the access or clear app storage and try again.</string>
    <string name="superuser_request_confirm">FM doesn\'t have access to your SD card, please select the external root directory SANDISK SD card and authorize FM to operate.</string>
    <string name="btn_save_recording">Save</string>
    <string name="btn_discard_recording">Discard</string>
    <string name="edit_recording_name_hint">Type file name here</string>
    <string name="already_exists">already exists</string>
    <string name="not_available">Currently not available</string>
    <string name="talk_prev_station">Previous station</string>
    <string name="talk_decrease">Decrease frequency</string>
    <string name="talk_increase">Increase frequency</string>
    <string name="talk_next_station">Next station</string>
    <string name="talk_add_favorite">Add to favorite</string>
    <string name="talk_start_recording">Start recording</string>
    <string name="more">"More"</string>
    <string name="recording_tips">Recording…</string>
    <string name="fm_symbol">FM</string>
    <string name="fm_turn_on">Play or stop FM radio</string>
    <string name="fm_over_start_record">Start recording</string>
    <string name="fm_over_record_list">Saved recordings</string>
    <string name="fm_station_list_menu_refresh">Refresh</string>
    <string name="fm_no_headset_text">To start listening, plug in headphones (used as an antenna)</string>
    <string name="station_title">Radio Stations</string>
    <string name="station_searching_tips">Getting stations</string>
    <string name="station_empty_text">Stations list is empty</string>
    <string name="hours_label">H</string>
    <string name="minutes_label">M</string>
    <string name="seconds_label">S</string>
    <string name="timer_default">00</string>
    <string name="default_label">:</string>
    <string name="record_title">Recording</string>
    <string name="stop_recording">Do you stop recording?</string>
    <string name="record_notification_message">Recording in progress</string>
    <string name="stop_record">STOP RECORDING</string>
    <string name="save_dialog_title">Save recording?</string>
    <string name="save_dialog_caption">To listen to recordings, open the music player.</string>
    <string name="favorites">Favorite</string>
    <string name="rename">Rename</string>
    <string name="station_rename_hint">Enter station name</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="toast_record_saved">Recording saved</string>
    <string name="toast_record_not_saved">Recording not saved</string>
    <string name="toast_listen">LISTEN</string>
    <string name="toast_type_c_error">FM does not support Type-c headset</string>
    <string name="toast_station_renamed">The station has been renamed</string>
    <string name="station_freq">Station freq(MHz)</string>
    <string name="change_frequency">Change frequency</string>
    <string name="button_ok">ok</string>
    <string name="button_cancel">cancel</string>
    <string name="station_delete">Are you sure to delete this station?</string>
    <plurals name="confirm_delfile">
        <item quantity="one">Are you sure to delete the file?</item>
        <item quantity="other">Are you sure to delete the files?</item>
    </plurals>
    <string name="dialog_title">Attention</string>
    <string name="range_error">Out of the radio range(87.5MHz-108MHz)</string>
    <string name="freq_input_info">Please input frequency</string>
    <string name="fm_over_record_format">Record type</string>
    <string name="select_file_type">Please select type</string>
    <string name="record_amr">amr type(low-quality)</string>
    <string name="record_3gpp">3gpp type(high-quality)</string>
    <string name="record_mp3">mp3 type(high-quality)</string>
    <string name="storage_phone">Phone</string>
    <string name="storage_sd">SD card</string>
    <string name="select_file_path">Select storage path</string>
    <string name="record_path">Set storage path</string>
    <string name="from_current_search">Search from current</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
    <string name="recorder_internal_error">"The current equipment is not available, please try to restart the recording function！"</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="fm_play">Play FM radio</string>
    <string name="fm_stop">Stop FM radio</string>
    <string name="toast_record_not_saved_fortime">"Recording time less than 1 second, not saved"</string>
    <string name="toast_record_not_saved_tmpfile_deleted">"Recording file does not exist now, not saved"</string>
    <string name="station_change_freq_hint">"Enter station frequency"</string>
    <string name="toast_station_freq_changed">"The station frequency has been changed"</string>
    <string name="toast_play_fm">"To start recording, please play FM radio."</string>
    <string name="same_application_running">"The recording device is use by another program,please close this program!"</string>
    <string name="rds_switch_off">"Turn off RDS"</string>
    <string name="rds_switch_on">"Turn on RDS"</string>
    <string name="rds_af_switch_off">"Turn off AF"</string>
    <string name="rds_af_switch_on">"Turn on AF"</string>
    <string name="fm_regularly_poweroff">"Scheduled off"</string>
    <string name="cancel_regularly_poweroff">"Cancel timing"</string>
    <string name="time_10min">"15 min"</string>
    <string name="time_20min">"30 min"</string>
    <string name="time_30min">"60 min"</string>
    <string name="time_60min">"90 min"</string>
    <string name="time_units">"min"</string>
    <string name="time_scustom_setting">"Custom setting"</string>
    <string name="fm_record_list">"FM Record List"</string>
    <string name="favorite_station_tag">"Favorite station"</string>
    <string name="other_station_tag">"Other station"</string>
    <string name="station_edit">"Edit station"</string>
    <string name="station_batch_operation">"Batch operation"</string>
    <string name="station_name">"Station name"</string>
    <string name="progress_deleting">"Deleting"</string>
    <string name="no_storage_permission">"No Storage Permission !"</string>
    <string name="no_allow_play_calling">"Cannot play any audio file during call."</string>
    <string name="playback_failed">The player doesn\'t support this type of audio file.</string>
    <string name="play_error">Play Error</string>
    <string name="record_error">Error</string>
    <string name="list_exists">The channel already exists in the channel list</string>
    <string name="batch_operation">Batch operation</string>
    <string name="input_error">Please input the correct time</string>
    <string name="record_start">Start</string>
    <string name="edit_freq">Edit channel</string>
    <string name="toast_storage_device_missing">Your storage device is missing!</string>
    <string name="fm_prevstation_title">Previous</string>
    <string name="fm_stopplay_title">Stop</string>
    <string name="fm_nextstation_title">Next</string>
    <string name="airplane_title">Flight Mode Warning</string>
    <string name="airplane_message">Can not turn on FM Radio in airplane mode.</string>
    <string name="delete_title_tip">Delete</string>
    <string name="playmode_title_tip">Play mode</string>
    <string name="station_name_exists">The station name already exists</string>
    <string name="station_name_notnull">Station name can\'t be null</string>
    <string name="recording_name_notnull">Name can\'t be null</string>
    <string name="recording_name_illegal">Name contains illegal characters \\&#058;&#042;&#063;&#034;&#060;&#062;&#124;&#047;</string>
    <string name="input_length_overstep">Maximum limit reached</string>
    <string name="list_view_empty">Recording list is empty</string>
    <string name="recording_is_preparing">Recording is preparing for playing,can\'t choose!</string>
    <string name="power_button_power_on">On</string>
    <string name="power_button_power_off">Off</string>
    <string name="timer_power_down_toast">Time is up. FM turning off</string>
    <string name="toast_record_saved_end">" saved"</string>
    <string name="headset_plug_out_tips">"FM is shutting down..."</string>
    <string name="mainui_search_tips">"Searching..."</string>
</resources>